<resources>

    <string name="data">Data</string>
    <string name="total_documents_label">Total</string>
    <string name="offline_documents_label">Offline</string>
    <string name="cached_documents_label">Cached</string>


    <string name="document_cache">Cache</string>
    <string name="cache_size">Cache size</string>
    <string name="current_cache_size_label">"Current cache size: "</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_comment">Remove all cached documents</string>

    <string name="document_offline">Offline</string>
    <string name="clear_offline">Remove offline documents</string>
    <string name="clear_offline_comment">All documents available offline will be removed</string>

    <string name="preference_user_repository">user_repository</string>

    <string name="app_name">VKDocs</string>
    <string name="continue_using_app">Continue using this app</string>
    <string name="logout">Logout</string>
    <integer name="com_vk_sdk_AppId">5252455</integer>
    <string name="title_activity_documents">My documents</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Navigation drawer -->
    <string name="drawer_my_documents">My documents</string>
    <string name="drawer_offline">Offline</string>
    <string name="drawer_uploads">Uploads</string>
    <string name="drawer_settings">Settings</string>

    <!-- Tabs -->
    <string name="tab_all">All</string>
    <string name="tab_text">Text</string>
    <string name="tab_books">Books</string>
    <string name="tab_archives">Archives</string>
    <string name="tab_gifs">Gifs</string>
    <string name="tab_images">Images</string>
    <string name="tab_music">Audio</string>
    <string name="tab_video">Video</string>
    <string name="tab_other">Other</string>

    <string name="from">from</string>
    <string name="download">Download</string>
    <string name="available_offline">Offline</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share_external">Share</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by">Sort by</string>
    <string name="label_added">Uploaded:</string>
    <string name="label_size">Size:</string>
    <string name="title_activity_document_viewer">DocumentViewerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_items">No items</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="clear_offline_message">This will delete all saved offline documents from this device.</string>
    <string name="clear_cache_message">Document cache will be cleared.</string>
    <string name="default_confirm_button">OK</string>
    <string name="default_cancel_button">@android:string/cancel</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="clear_offline_title">Remove offline documents</string>
    <string name="file1_label">file</string>
    <string name="file24_label">files</string>
    <string name="files">files</string>
    <string name="no_archives">No archives</string>
    <string name="no_audios">No audios</string>
    <string name="no_videos">No videos</string>
    <string name="no_gifs">No gifs</string>
    <string name="no_images">No images</string>
    <string name="no_documents">No documents</string>
    <string name="no_books">No books</string>
    <string name="no_others">No items</string>
    <string name="logout_message">Logging out will delete all data related to this account from this device.</string>

    <string name="cache_size_title">Cache size</string>
    <string name="delete_document_title">Deleting document</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="couldnt_open">Could not open file</string>
    <string name="open_in_other_app">Open in other app</string>
    <string name="open_button">OPEN</string>
    <string name="all_title_tab">ALL</string>
    <string name="offline_title_tab">OFFLINE</string>
    <string name="no_app">Could not open file</string>
    <string name="couldnt_open_audio">Could not open audio</string>
</resources>
