<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/bottom_share_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/share_external"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/share_external"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/bottom_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/share"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/send"/>
    </RelativeLayout>

    <View style="@style/Divider.SubSection"/>

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/bottom_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/download_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/download"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/body_available_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/offline_grey"/>

        <TextView
            android:id="@+id/text_available_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/available_offline"
            android:layout_toLeftOf="@+id/switch1"
            android:layout_toStartOf="@+id/switch1" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/m_grid_1x"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/switch1"
            app:theme="@style/AppTheme"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/bottom_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/rename_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/rename"/>
    </RelativeLayout>

    <View style="@style/Divider.SubSection"/>

    <RelativeLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/bottom_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/bottom_dialog_item_height">

        <ImageView
            android:layout_width="@dimen/m_entry_icon_size"
            android:layout_height="@dimen/m_entry_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/m_grid_2x"
            style="@style/FixedSizeIcon"
            app:srcCompat="@drawable/delete"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListEntryTitle.BottomList.Relative"
            android:text="@string/delete"/>
    </RelativeLayout>

</LinearLayout>